[project]
name = "comfyui_jankdiffusehigh"
description = "Janky implementation of [a/DiffuseHigh](https://github.com/yhyun225/DiffuseHigh/) for ComfyUI. Enables generating at resolutions higher than what the model was trained for without requiring model patches."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["pywavelets", "pytorch-wavelets"]

[project.urls]
Repository = "https://github.com/blepping/comfyui_jankdiffusehigh"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui_jankdiffusehigh"
Icon = ""
